syntax = "proto3";

package com.taskcomposer.workflow_manager;

option java_multiple_files = true;
option java_package = "com.taskcomposer.workflow_manager";

message KeyValue {
  string key = 1;
  string value = 2;
}

message TriggerRequest {
  string workflow_name = 1;
  repeated string tags = 2;
  repeated KeyValue parameters = 3;
  repeated KeyValue args = 4;
}

message TriggerResponse {
  string uuid = 1;
}

service WorkflowTriggerService {
  rpc triggerWorkflow(TriggerRequest) returns (TriggerResponse);
}